# HoMLaDS-Project

./: .gitignore  README.md  conftest.py  generate_test_sets.py  pyproject.toml  train_model.py
data/: topic21_v3_train.csv
tests/: test_skops_model.py
