[project]
name = "homlads-project-with-original"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "pytest>=8.4.1",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "skops>=0.11.0",
]
